Restructure project and enhance ObjGenerator
Moved MathLibrary and test files into subdirectories for better organization. Refactored ObjGenerator/ObjGeneratorMain.cs with improved documentation, code structure, error handling, and performance optimizations. Updated project references and added several documentation and report markdown files describing the new structure and optimizations.

--- a/MathLibraryTest/MathLibraryTest.csproj
+++ b/MathLibraryTest/MathLibraryTest.csproj
@@ -12,7 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MathLibrary.csproj" />
+    <ProjectReference Include="..\MathLibrary\MathLibrary.csproj" />
   </ItemGroup>
 
 </Project>
