--- a/ModelIOTools/ModelIOTools.csproj
+++ b/ModelIOTools/ModelIOTools.csproj
@@ -1,10 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>MathLibraryTest</RootNamespace>
-    <AssemblyName>MathLibraryTest</AssemblyName>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
@@ -13,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MathLibrary\MathLibrary.csproj" />
+    <ProjectReference Include="..\GeometryTools\GeometryTools.csproj" />
   </ItemGroup>
 
 </Project>
